# AI-projects

Gemini Test/: main.py  pyproject.toml
Gemini Test/my_agent/: agent.py
OpenAI_SDK_test/: .gitignore  Qwen_custom_test.ipynb  context.py  fail_local_multi_agent_tool_test.py  gardrail_input_test.py  gardrail_multi_agent_test.py  gardrail_output_test.py  gardrail_tool_test.py  guardrail_test.py  local_Qwen_test.ipynb  multi_agent_tool_test.py  multi_agent_triage_test.ipynb  pyproject.toml  session_confirmation.py  session_test.py  single_agent_test.py  single_agent_tool_test.py
OpenAI_SDK_test/cloud_models/: single_agent_test.ipynb
OpenAI_SDK_test/models/: gpt-5-nano_test.py  local_agent_test.ipynb  single_agent_test.ipynb  single_agent_test.py
